# MuXolotl-Converter

./: .gitignore  README.md  TODO.md  TODO.ru.md  VERSION  index.html  package-lock.json  package.json  splashscreen.html  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: deploy-site.yml  formatter.yml  release.yml
scripts/: update-version.cjs  update-version.js
src/: App.css  App.svelte  App.tsx  config.ts  main.ts  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/: .gitkeep
src-tauri/capabilities/: default.json
src-tauri/src/: binary.rs  codec_map.rs  codec_registry.rs  commands.rs  error.rs  gpu.rs  lib.rs  main.rs  media.rs  types.rs  utils.rs  validator.rs
src-tauri/src/converter/: audio.rs  builder.rs  common.rs  mod.rs  progress.rs  video.rs
src-tauri/src/formats/: audio.rs  audio_formats.toml  mod.rs  video.rs  video_formats.toml
src/components/: ActionBar.svelte  ConvertButton.tsx  DropZone.svelte  DropZone.tsx  ErrorBoundary.tsx  ErrorModal.svelte  FeedbackModal.svelte  FileCard.tsx  FileList.tsx  FileManager.tsx  Footer.svelte  FormatSelector.svelte  FormatSelector.tsx  GpuIndicator.svelte  GpuIndicator.tsx  Header.tsx  OutputFolderSelector.svelte  OutputFolderSelector.tsx  Queue.svelte  QueueItem.svelte  Sidebar.svelte  SplitPane.svelte  TitleBar.svelte  Toolbar.svelte
src/components/ConvertButton/: index.tsx
src/components/DropZone/: index.tsx
src/components/ErrorModal/: index.tsx
src/components/FeedbackModal/: index.tsx
src/components/FileCard/: AdvancedSettings.tsx  CompactCard.tsx  FileInfo.tsx  FormatSettings.tsx  MetadataEditor.tsx  ProgressBar.tsx  ProgressIndicator.tsx  StatusActions.tsx  ValidationMessages.tsx  index.tsx
src/components/FileList/: index.tsx
src/components/Footer/: index.tsx
src/components/FormatSelector/: FilterPanel.tsx  FormatItem.tsx  index.tsx  utils.ts
src/components/GpuIndicator/: index.tsx
src/components/Header/: index.tsx
src/components/Inspector/: AudioWaveform.tsx  FileInfo.svelte  Inspector.svelte  SettingsPanel.svelte  SettingsPanel.tsx  Tabs.svelte  Tabs.tsx  ValidationBanner.svelte  ValidationBanner.tsx  index.tsx  useFormats.ts  useValidation.svelte.ts  useValidation.ts
src/components/Layout/: SplitPane.tsx
src/components/Queue/: QueueItem.tsx  index.tsx
src/components/Sidebar/: index.tsx
src/components/TitleBar/: index.tsx
src/components/Toolbar/: index.tsx
src/components/inspector/: FormatSelector.svelte
src/components/layout/: Sidebar.svelte  SplitPane.svelte  (+2 more)
src/constants/: index.ts  presets.ts
src/hooks/: useConversion.ts  useFileQueue.ts  useFileSettings.ts  useGpu.ts  useNotifications.ts  useTaskbarProgress.ts
src/stores/: conversion.svelte.ts  fileQueue.svelte.ts  gpu.svelte.ts
src/types/: index.ts
src/utils/: file.ts  fileHelpers.ts  format.ts  index.ts  media.ts  paths.ts  storage.ts
(+11 files in other folders)
