[package]
name = "muxolotl-converter"
version = "1.0.0"
description = "High-Performance Audio & Video Converter"
authors = ["MuXolotl Team"]
license = "MIT"
repository = "https://github.com/muxolotl/converter"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-write-file", "fs-read-file", "fs-create-dir", "fs-read-dir", "protocol-asset", "fs-copy-file", "fs-exists", "fs-rename-file", "fs-remove-file", "fs-remove-dir", "dialog-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
regex = "1.11"
lazy_static = "1.5"
anyhow = "1.0"
toml = "0.9"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
opt-level = 1

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[profile.release.package."*"]
opt-level = 3
codegen-units = 1
